--- a/index.ipynb
+++ b/index.ipynb
@@ -617,7 +617,9 @@
     }
    ],
    "source": [
-    "df.info()"
+    "df.info()\n",
+    "\n",
+    "#info() previews the column types"
    ]
   },
   {
@@ -1464,7 +1466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
